# Benchmark-PQC

./: .gitattributes  .gitignore  CHECKSUMS.json  LICENSE  Makefile  README.md  pqc-bench.sh  pyproject.toml  requirements.txt  verify_checksums.py
config/: build-config.sh
data/metadata/: exp_20251223_234704.metadata.json
data/processed/: processed_data.csv
data/raw/arm64/mldsa/: mldsa44_mldsa_20251224_011253.csv  mldsa44_mldsa_20251224_011253.json  mldsa65_mldsa_20251224_011253.csv  mldsa65_mldsa_20251224_011253.json  mldsa87_mldsa_20251224_011253.csv  mldsa87_mldsa_20251224_011253.json
data/raw/arm64/mlkem/: mlkem1024_mlkem_20251224_011253.csv  mlkem1024_mlkem_20251224_011253.json  mlkem512_mlkem_20251224_011253.csv  mlkem512_mlkem_20251224_011253.json  mlkem768_mlkem_20251224_011253.csv  mlkem768_mlkem_20251224_011253.json
data/raw/riscv64/mldsa/: mldsa44_mldsa_20251224_011253.csv  mldsa44_mldsa_20251224_011253.json  mldsa65_mldsa_20251224_011253.csv  mldsa65_mldsa_20251224_011253.json  mldsa87_mldsa_20251224_011253.csv  mldsa87_mldsa_20251224_011253.json
data/raw/riscv64/mlkem/: mlkem1024_mlkem_20251224_011253.csv  mlkem1024_mlkem_20251224_011253.json  mlkem512_mlkem_20251224_011253.csv  mlkem512_mlkem_20251224_011253.json  mlkem768_mlkem_20251224_011253.csv  mlkem768_mlkem_20251224_011253.json
docs/: REPRODUCIBILITY.md  REPRODUCIBILITY_CHECKLIST.md
lib/: banner-functions.sh  common-functions.sh
results/: mldsa44_mldsa_results.csv  mldsa44_mldsa_results.json  mldsa65_mldsa_results.csv  mldsa65_mldsa_results.json  mldsa87_mldsa_results.csv  mldsa87_mldsa_results.json  mlkem1024_mlkem_results.csv  mlkem1024_mlkem_results.json  mlkem512_mlkem_results.csv  mlkem512_mlkem_results.json  mlkem768_mlkem_results.csv  mlkem768_mlkem_results.json
results/analysis/: analysis_summary.json  hypothesis_tests.csv  performance_ratios.csv  pki_throughput_model.csv  summary_table.csv  tabla_ratios_rendimiento.tex  tls_overhead_model.csv
scripts/: backup_results.sh  benchmark_mldsa_summary.sh  benchmark_mlkem_summary.sh  clean_project.sh  collect_metadata.sh  common-functions.sh  compile_cross_benchmarks.sh  experiment_config.sh  generate_checksums.py  run_all_qemu_benchmarks.sh  run_experiments.sh  run_qemu_benchmarks.sh  validate_data.py  validate_results.sh
setup/: install-qemu.sh  install-toolchains.sh  setup-complete.sh  verify-environment.sh
src/adapters/: README.md  liboqs_adapter.c  liboqs_adapter.h
src/analysis/: __init__.py  generate_figures.py  statistical_analysis.py
src/benchmarks/: benchmark_mldsa.c  benchmark_mlkem.c  generic_benchmark.c  generic_benchmark.h  measure_sizes.c
src/core/: README.md  algorithm_interface.c  algorithm_interface.h  benchmark_engine.h  error_codes.h  provider_interface.c  provider_interface.h
src/utils/: logger.c  logger.h  stats.c  stats.h  timing.c  timing.h
